--- a/apimgr/templates/cluster-config/configmap.yaml
+++ b/apimgr/templates/cluster-config/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: {{ .Release.Name }}-cluster-configmap
   namespace: {{ .Values.namespace }}
 data:
   myvalue: "API Gateway/Manager."
